--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "cors": "^2.8.5",
+        "@dynatrace-oss/dynatrace-mcp-server": "^0.5.0",
+        "@modelcontextprotocol/sdk": "latest",
         "body-parser": "^1.20.2",
-        "@dynatrace-oss/dynatrace-mcp-server": "latest",
-        "@modelcontextprotocol/sdk": "latest"
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.2",
+        "express": "^4.18.2"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
