--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-    "name": "dynatrace-mcp-proxy",
+    "name": "dynatrace-mcp-http-bridge",
     "version": "1.0.0",
-    "description": "HTTP proxy for Dynatrace MCP Server",
+    "description": "HTTP bridge for Dynatrace MCP Server - Compatible with Copilot Studio",
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "test": "node test-server.js"
     },
     "dependencies": {
-        "@dynatrace-oss/dynatrace-mcp-server": "^0.5.0",
-        "@modelcontextprotocol/sdk": "latest",
-        "body-parser": "^1.20.2",
+        "express": "^4.18.2",
         "cors": "^2.8.5",
-        "dotenv": "^17.2.2",
-        "express": "^4.18.2"
+        "dotenv": "^16.3.1",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
     },
     "engines": {
         "node": ">=18.0.0"
-    }
+    },
+    "keywords": [
+        "dynatrace",
+        "mcp",
+        "model-context-protocol",
+        "http-bridge",
+        "copilot-studio",
+        "azure"
+    ]
 }
